--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -5,11 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ title ?? site:name }}</title>
-        {{ vite src="resources/js/site.js|resources/css/site.css" }}
+        {{ vite src="resources/js/site.js|resources/css/site.scss" }}
+
+        {{ vite src="resources/js/partials/sets/collection_filter.js|resources/css/partials/sets/collection_filter.scss" }}
+        {{ vite src="resources/css/partials/sets/collection.scss" }}
     </head>
-    <body class="bg-gray-100 font-sans leading-normal text-gray-800">
-        <div class="mx-auto px-2 lg:min-h-screen flex flex-col items-center justify-center">
+    <body>
+        {{ partial:header }}
+        <main>
             {{ template_content }}
-        </div>
+        </main>
     </body>
 </html>
